# yamlscript

./: .claude.md  .cljfmt.edn  .common-clj.mk  .common.mk  .gitattributes  .gitignore  .profile  .rc  .version.sh  .version.ys  404.html  CNAME  Changes  Contributing.md  DebugWithTmate.md  Dockerfile  License  Makefile  Meta  ReadMe.md  Testing.md  apr-15-2024.md  faq.mdys  feed.xml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  helm-ys  index.html  index.mdys  install  install-libyamlscript  install-ys  mdys.ys  reloader.ys  robots.txt  rss.xml  run-ys  sitemap.xml  (+5 more)
.claude-plugin/: marketplace.json
.clj-kondo/: config.edn
.github/: Code-of-Conduct.md
_site_tests_/: index.html
about/: index.html
about-website/: index.html
ai/: ReadMe.md
assets/: main.089cde16aad3ee63f22f.css  main.568c13b05248bebc365e.css  main.769d3d1b7edc71568d89.css  main.7eeaf7bb0c5b5da98e70.css  main.8554ff421a6eb7d9f7e5.css  main.8884b854956ffa796bf2.css  main.c21097e62eb3779f2347.css  main.css  main.f4ecd09b1608669889a9.css  main.fc9b07030678f58b9d0b.css  main.js  manifest.json
blog/: 2023-12-01.md  2023-12-02.md  2023-12-03.md  2023-12-04.md  2023-12-05.md  2023-12-06.md  2023-12-07.md  2023-12-08.md  2023-12-09.md  2023-12-10.md  2023-12-11.md  2023-12-12.md  2023-12-13.md  2023-12-14.md  2023-12-15.md  2023-12-16.md  2023-12-17.md  2023-12-18.md  2023-12-19.md  2023-12-20.md  2023-12-21.md  2023-12-22.md  2023-12-23.md  2023-12-24.md  2024-03-14.md  2024-04-16.md  2024-06-20.md  2024-07-17.md  2024-11-05.md  2024-11-29.md  2025-03-10.md  2025-03-11.md  2025-03-24.md  2025-06-01.md  2025-06-02.md  2025-06-03.md  2025-06-04.md  2025-06-05.md  2025-06-06.md  2025-06-07.md  (+58 more)
c/: CMakeLists.txt  Makefile  ReadMe.md  yamlscript_c.c  yamlscript_c.h
c/src/: CMakeLists.txt  yamlscript_c.c  yamlscript_c.h
c/test/: CMakeLists.txt  test.c
cicd/: index.html
circleci/: index.html
cli/: .gitignore  Makefile  project.clj  test.sh
clojure/: .cljfmt.edn  .gitignore  Dockerfile  License  Makefile  ReadMe.md  deps.edn  pom.xml  project.clj
common/: base.mk  binding.mk  clojure.mk  docker-apt-base.dockerfile  docker-apt-clojure.dockerfile  docker-apt-dev.dockerfile  docker-apt-node.dockerfile  docker-apt-perl.dockerfile  docker-apt-python.dockerfile  docker-copy-project-clj.dockerfile  docker-copy-project-deps.dockerfile  docker-deps-clojure.dockerfile  docker-deps-node.dockerfile  docker-deps-perl.dockerfile  docker-deps-python.dockerfile  docker-from-ubuntu.dockerfile  docker-install-graalvm.dockerfile  docker-useradd.dockerfile  docker.mk  install  install.mk  java.mk  jni-config.yaml  maven-settings.xml  native.mk  project.clj  python.mk  readme.md  reflect-config.yaml  reflection.json  reflection.yaml  reflection.ys  release.md  resource-config.yaml  ubuntu.dockerfile  vars-cli.mk  vars-core.mk  vars-libys.mk  vars-rapidyaml.mk  vars.mk  (+2 more)
community/: index.html
compiler/: Makefile  ReadMe.md  project.clj
contrib/: index.html
contrib-roadmap/: index.html
contrib-rules/: index.html
contrib-website/: index.html
contribute/: index.html
core/: CHANGES.md  Makefile  ReadMe.md  deps.edn  project.clj
crystal/: .gitignore  LICENSE  Makefile  ReadMe.md  shard.yml
csharp/: .gitignore  Makefile  ReadMe.md  YAMLScript.csproj
css/: theme.css
d/: .gitignore  dub.json
defang/: 99-bottles-of-beer.ys  Makefile  add-fns.ys  comments.yaml  load-pyyaml.py  script.ys  slides.vroom
demos/: index.html
devops-416/: .gitignore  alias.yaml  baby1.ys  baby2.ys  config3.yaml  config7.yaml  destructing.ys  dev-vars.yaml  file.yaml  loader.ys  loops.ys  modes2.ys  slides.vroom  vimrc
doc/: 4clojure.mdys  Makefile  binary.md  bindings.md  capability.md  chain.md  cheat.md  cli.md  clj-core.md  clj-to-ys.md  clojure.md  common.md  control.md  core.md  core.mdys  define.md  embedding.md  env-vars.md  examples.md  exercism.md  ext-libs.md  external.md  gotchas.md  helmys.md  index.html  index.md  install.md  intro.md  loaders.md  macros.md  mdys.ys  mode-tags.md  modes.md  multi-doc.md  operators.md  programming.md  query.md  readme.md  referencing.md  run-ys.md  (+27 more)
eg/: 99-bottles.ys  fizzbuzz.ys  greeting.ys
elixir/: .gitignore  Makefile  README.md  mix.exs
faq/: index.html
foo/: index.html
fosdem/: Makefile  ReadMe.md  data-gen.ys  data-generator.py  data-generator.ys  data.py  data.ys  database.yaml  out.txt  people.yaml  places.yaml  run.sh  ys-slides.md
fosdem-2024/: index.html
gha/: index.html
gist/: index.html
go/: .gitignore  Makefile  README  ReadMe.md  go.mod  yamlscript.go  yamlscript_test.go  ys.go  ys_test.go
hacks/: index.html
happy-valentines-day-ashley/: index.html
haskell/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ReadMe.md  cabal.ys  stack.yaml  yamlscript.cabal
haskell/doc/: authors.md  readme.md
haskell/lib/: YAMLScript.hs
haskell/lib/YAMLScript/: FFI.hs
haskell/src/: YAMLScript.hs
haskell/test/: Main.hs  Spec.hs  Test.hs
haskell/test/YAMLScript/: Tests.hs
haskell/test/data/: complex.ys
helmys/: index.html
info/: index.html
ingydotnet/: index.html
java/: Makefile  pom.xml
jni-graal/: .gitignore  Makefile  README.md  common.mk
js/: .gitignore  Changes  Makefile
json/: index.html
rapidyaml/native/: .gitignore  CMakeLists.txt  Makefile  musl.x86_64.cmake  org_rapidyaml_Rapidyaml.cpp  org_rapidyaml_Rapidyaml.h  rapidyaml_edn.cpp  rapidyaml_edn.hpp  rapidyaml_edn_handler.cpp  rapidyaml_edn_handler.hpp  rapidyaml_events.cpp  rapidyaml_events.hpp  rapidyaml_evt.cpp  rapidyaml_evt.hpp  rapidyaml_evt_handler.cpp  rapidyaml_evt_handler.hpp  rapidyaml_parse_emit.cpp  rapidyaml_test.cpp  ysparse_common.hpp  ysparse_edn.cpp  ysparse_edn.hpp  ysparse_edn_handler.cpp  ysparse_edn_handler.hpp  ysparse_evt.cpp  ysparse_evt.hpp  ysparse_evt_handler.cpp  ysparse_evt_handler.hpp  ysparse_test.cpp
rust/: Cargo.toml  Makefile  ReadMe.md
rust/doc/: authors.md  readme.md
rust/examples/: compile_ys_to_clj.rs  eval_ys_to_json.rs
rust/src/: error.rs  lib.rs  main.rs
rust/tests/: load.rs
(+1401 files in other folders)
