[package]
name = "yamlscript"
version = "0.1.77"
edition = "2021"
description = "Program in YAML — Code is Data"
license = "MIT"
readme = "ReadMe.md"
repository = "https://github.com/yaml/yamlscript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
libc = "0.2.150"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
